--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  /* font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif; */
 }
 
 .navbar {
