files structure updated

--- a/index.css
+++ b/index.css
@@ -4,7 +4,12 @@
 * {
   margin: 0;
   padding: 0;
-  /* font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif; */
+  font-family: "Inter";
+}
+
+.main_page {
+  width: 100vw;
+  height: 100vh;
 }
 
 .navbar {
@@ -28,8 +33,11 @@
   margin-top: 28px;
   margin-left: 8%;
 }
+.nav_right {
+  display: flex;
+}
 
-.nav-search {
+.nav_search {
   margin-top: -40px;
   margin-left: 70%;
 }
@@ -126,14 +134,14 @@
 .comming-soon {
   display: flex;
   color: #78828a;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
-  align-items: left;
+  align-items: center;
   padding: 0px;
   margin-left: 30px;
 }
 
-.side-liberary {
+.side-library {
   height: 48px;
   width: 24px;
   margin-top: 46px;
@@ -147,7 +155,7 @@
   display: flex;
   color: #78828a;
   align-items: center;
-  gap: 12px;  
+  gap: 12px;
   float: left;
   margin-left: 30px;
 }
@@ -155,17 +163,9 @@
 .side-download {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 0px;
   color: #78828a;
   gap: 12px;
-  width: 115px;
-  height: 24px;
-  flex: none;
-  order: 1;
-  flex-grow: 0;
-  margin-left: 25px;
+  margin-left: 30px;
 }
 
 .side-darkmode {
@@ -174,12 +174,8 @@
   justify-content: center;
   align-items: center;
   color: #78828a;
-  padding: 0px;
-  gap: 12px;
-  width: 115px;
-  height: 24px;
-  margin-left: 35px;
-  
+  gap: 10px;
+  margin-left: -35px;
 }
 
 .side-setting {
@@ -190,20 +186,15 @@
   color: #78828a;
   padding: 0px;
   gap: 12px;
-  width: 115px;
-  height: 24px;
-  flex: none;
-  order: 1;
-  flex-grow: 0;
-  margin-left: 15px;
+  margin-left: -120px;
 }
 
 /* --------------------hero-section------------------- */
 
 .hero-sec-one {
   position: absolute;
-  width: 1372px;
-  height: 193px;
+  width: 75%;
+  height: 25%;
   top: 104px;
   left: 289px;
 }
@@ -222,8 +213,7 @@
   height: 13rem;
   width: 80vw;
   display: flex;
-  /* border: 1px solid black; */
-  gap: 20px;
+  /* gap: 10px; */
 }
 
 .box1 {
@@ -231,7 +221,6 @@
   flex-direction: row;
   height: 10rem;
   width: 20vw;
-  /* border: 1px solid lightblue; */
   margin-top: 30px;
 }
 
@@ -253,3 +242,52 @@
   line-height: 35px;
 }
 
+.hero_sec_two {
+  position: relative;
+  align-items: end;
+  width: 75%;
+  height: 55vh;
+  top: 104px;
+  left: 289px;
+  margin-top: -710px;
+}
+
+.action_sec_up {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
+
+.sec_two_action {
+  height: 25vh;
+  width: 20%;
+  margin-top: 10px;
+  margin-left: 30px;
+  cursor: pointer;
+}
+
+.action_text {
+  font-size: 24px;
+  font-weight: 700;
+  margin-left: 10px;
+}
+
+.action_image > img {
+  height: 20vh;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.action_image_text {
+  font-size: 16px;
+  font-weight: 700;
+  margin-top: 3px;
+  line-height: 24px;
+}
+
+.action_sec_down {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  margin-top: 20px;
+}
